test/errors/unknown_component_notify_settings.ecsact
package error.unknown_notify_settings;

component ExampleComponent {
  i32 num;
}

system UnknownComponentNotifySettings {
  readwrite ExampleComponent;

  notify {
    always NonExistentComponent;
  }
}
